[package]
name        = "inc"
version     = "0.1.1"
authors     = ["Jaseem Abid <jaseemabid@gmail.com>"]
edition     = "2018"
license     = "MIT"
description = "Incremental approach to compiler construction"
repository  = "https://github.com/jaseemabid/inc"
categories  = []
keywords    = ["compiler", "x86", "scheme"]

[dependencies]
getopts = "0.2"
nom = "^5.0"

[dev-dependencies]
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand = "0.7.0"
