[package]
name        = "inc"
version     = "0.1.3"
authors     = ["Jaseem Abid <jaseemabid@gmail.com>"]
edition     = "2018"
license     = "MIT"
description = "Incremental approach to compiler construction"
repository  = "https://github.com/jaseemabid/inc"
categories  = []
keywords    = ["compiler", "x86", "scheme"]

[lib]
crate_type = ["dylib", "rlib"]
path       = "src/lib.rs"

[[bin]]
name = "ss"
path = "src/main.rs"

[dependencies]
colored = "^1.9.0"
getopts = "0.2"
libc = "^0.2"
nom = "^5.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand = "0.7"
